# HeMuRo-Framework

./: CMakeLists.txt  README.md  configure_linux.sh  configure_osx.sh  configure_reverse.sh  package.xml  run_linux.sh
MRSFramework.xcodeproj/: project.pbxproj
MRSFramework.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MRSFramework.xcodeproj/project.xcworkspace/xcuserdata/afonso.xcuserdatad/: UserInterfaceState.xcuserstate
MRSFramework.xcodeproj/project.xcworkspace/xcuserdata/afonsofonbraga.xcuserdatad/: UserInterfaceState.xcuserstate
MRSFramework.xcodeproj/xcshareddata/xcschemes/: MRSFramework.xcscheme  MRSMac.xcscheme
MRSFramework.xcodeproj/xcuserdata/afonso.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MRSFramework.xcodeproj/xcuserdata/afonso.xcuserdatad/xcschemes/: xcschememanagement.plist
MRSFramework.xcodeproj/xcuserdata/afonsofonbraga.xcuserdatad/xcschemes/: xcschememanagement.plist
MRSMac/: hello.cpp  main.cpp  original.cpp  sendMission.cpp  te.cpp
ROS_Workspace/src/: Firmware  sitl_gazebo
ROS_Workspace/src/hemuro_sim/launch/: move_base_p3dx.launch  p3dx.launch  robots.launch  simulation.launch
ROS_Workspace/src/hemuro_sim/param/P3DX/: trajectory_planner.yaml
ROS_Workspace/src/hemuro_sim/param/Rosbot/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
ROS_Workspace/src/teste/: CMakeLists.txt  package.xml
ROS_Workspace/src/teste/src/: teste.cpp
logs/: .gitignore
main/: CMakeLists.txt  hospital.cpp  main.cpp  mainclean.cpp  speedTest.cpp  warehouse.cpp
results/: graphics.py
src/: CMakeLists.txt
src/Agents/: Agent.cpp  Agent.hpp
src/Agents/ChargingStation/: ChargingStation.cpp  ChargingStation.hpp
src/Agents/Default/: DefaultRobot.cpp  DefaultRobot.hpp
src/Agents/Logger/: LoggerAgent.cpp  LoggerAgent.hpp
src/Agents/Mavros/: MavrosRobot.cpp  MavrosRobot.hpp  ROSModuleMavros.cpp  ROSModuleMavros.hpp  TakePicture.cpp
src/Agents/P3DX/: P3DXRobot.cpp  P3DXRobot.hpp  ROSModuleP3DX.cpp  ROSModuleP3DX.hpp
src/Agents/Rosbot/: ROSModuleRosbot.cpp  ROSModuleRosbot.hpp  RosbotRobot.cpp  RosbotRobot.hpp
src/Agents/Turtlebot/: GoTo.cpp  ROSModuleTurtlebot.cpp  ROSModuleTurtlebot.hpp  TurnOn.hpp  TurtlebotRobot.cpp  TurtlebotRobot.hpp
src/Alive/: Alive.cpp  Alive.hpp
src/AtomicTasks/: ArmMavROS.cpp  ArmMavROS.hpp  AtomicTask.cpp  AtomicTask.hpp  ChargeBatteryROS.cpp  ChargeBatteryROS.hpp  ChargeBatterySim.cpp  ChargeBatterySim.hpp  DisarmMavROS.cpp  DisarmMavROS.hpp  DropOffSim.cpp  DropOffSim.hpp  GoToROS.cpp  GoToROS.hpp  GoToSim.cpp  GoToSim.hpp  LandMavROS.cpp  LandMavROS.hpp  MeasureTemperatureSim.cpp  MeasureTemperatureSim.hpp  MoveBaseGoal.cpp  MoveBaseGoal.hpp  NavigateMavROS.cpp  NavigateMavROS.hpp  PickUpSim.cpp  PickUpSim.hpp  TakeOffMavROS.cpp  TakeOffMavROS.hpp  TakePictureSim.cpp  TakePictureSim.hpp  TurnOnSim.cpp  TurnOnSim.hpp
src/Communication/: CMakeLists.txt  UDPBroadcast.cpp  UDPBroadcast.hpp  UDPReceiver.cpp  UDPReceiver.hpp  UDPReceiverSim.cpp  UDPReceiverSim.hpp  UDPSender.cpp  UDPSender.hpp
src/Core/: BatteryManager.cpp  BatteryManager.hpp  BlackBoard.cpp  BlackBoard.hpp  Blackboard.cpp  Blackboard.hpp  CMakeLists.txt  ChargingRequest.hpp  Logger.cpp  Logger.hpp  Module.cpp  Module.hpp  ModulePeriodic.cpp  ModulePeriodic.hpp  dataTypes.hpp
src/Energy/: BatteryManager.cpp  BatteryManager.hpp  ChargingRequest.hpp  ChargingSpot.cpp  ChargingSpot.hpp
src/Mission/: Auction.cpp  Auction.hpp  CMakeLists.txt  Mission.cpp  Mission.hpp  MissionExecution.cpp  MissionExecution.hpp  MissionManager.cpp  MissionManager.hpp  MissionRequest.cpp  MissionRequest.hpp  TaskModule.cpp  TaskModule.hpp
src/OLD/: ChargeBattery.cpp  DecomposableTasks.cpp  DecomposableTasks.hpp  GoTo.hpp  MissionManager.cpp  MissionManager.hpp  TakePicture.hpp  dataTask.hpp
src/Task/: AtomicTask.cpp  AtomicTask.hpp  CMakeLists.txt  DecomposableTask.cpp  DecomposableTask.hpp  Task.cpp  Task.hpp  TaskManager.cpp  TaskManager.hpp  TurnOn.cpp  TurnOn.hpp
src/Task/ChargingStation/: ChargingSpot.hpp  ChargingStation.cpp  ChargingStation.hpp
src/Task/Default/: ChargeBattery.cpp  ChargeBattery.hpp  DecomposableTasks.cpp  DecomposableTasks.hpp  DefaultRobot.cpp  DefaultRobot.hpp  GoTo.cpp  GoTo.hpp  TakePicture.cpp  TurnOn.cpp  dataTask.hpp
src/Task/Logger/: LoggerAgent.cpp  LoggerAgent.hpp
src/Task/Mavros/: Alive.cpp  Alive.hpp  Arm.cpp  Arm.hpp  ChargeBattery.cpp  ChargeBattery.hpp  DecomposableTasks.cpp  GoTo.cpp  GoTo.hpp  Land.cpp  Land.hpp  MavrosRobot.cpp  MavrosRobot.hpp  TakeOff.cpp  TakeOff.hpp  dataTask.hpp
src/Task/Rosbot/: Alive.cpp  Alive.hpp  ChargeBattery.cpp  ChargeBattery.hpp  DecomposableTasks.cpp  DecomposableTasks.hpp  GoTo.cpp  GoTo.hpp  MoveBaseGoal.cpp  MoveBaseGoal.hpp  RosbotRobot.cpp  RosbotRobot.hpp  TakePicture.cpp  dataTask.hpp
src/Task/Turtlebot/: Alive.cpp  Alive.hpp  ChargeBattery.cpp  DecomposableTasks.cpp  DecomposableTasks.hpp  GoTo.cpp  GoTo.hpp  GoTo2.hpp  TurtlebotRobot.cpp  TurtlebotRobot.hpp  dataTask.hpp
src/Web/: MRSstyle.css  WebApp.cpp  WebApp.hpp  WebModule.cpp  WebModule.hpp
src/core/: BlackBoard.cpp  BlackBoard.hpp  CMakeLists.txt  Module.cpp  Module.hpp  ModulePeriodic.cpp  ModulePeriodic.hpp
